# psil

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
clitests/: cities.psil.ex  cities.test.psil  coffee.psil  coffee.test.psil  coffee.test.psil.ex  comb.psil.ex  comb.test.psil  decorate.psil  decorate.psil.ex  examples.psil.ex  examples.test.psil  fib.test.psil  fib.test.psil.ex  replexample.testi.psil  replexample.testi.psil.ex  reverse-tree.test.psil  reverse-tree.test.psil.ex  testall.sh
src/: CMakeLists.txt  main.cpp
src/logger/: CMakeLists.txt
src/logger/include/: Logger.h
src/logger/src/: Logger.cpp
src/support/: CMakeLists.txt
src/support/include/: Logger.h  Options.h
src/support/src/: Logger.cpp  Options.cpp
src/vm/: CMakeLists.txt
src/vm/include/: Cell.h  Command.h  Compiler.h  Handle.h  MemoryContext.h  Options.h  Parser.h  VM.h
src/vm/includes/: Cell.h  Command.h  Compiler.h  ConsUtils.h  Handle.h  MemoryContext.h  Parser.h  SParser.h  VM.h
src/vm/src/: Cell.cpp  Compiler.cpp  ConsUtils.cpp  Handle.cpp  MemoryContext.cpp  Parser.cpp  SParser.cpp  VM.cpp
test/: CMakeLists.txt
test/vm/: CMakeLists.txt  CompilerTest.cpp  GCTest.cpp  VMTest.cpp  VMWithParserTest.cpp
